Document PPDG/src/objects/Post_Completion__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Product Switch</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Post Completions (Application Opportunity)</relationshipLabel>
        <relationshipName>Post_Completions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master_Opportunity__c</fullName>
        <label>Master Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Post Completions</relationshipLabel>
        <relationshipName>Post_Completions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Switch_Open__c</fullName>
        <formula>if( And(Text(Action__c) = &quot;Product Switch&quot;, Text(Status__c) = &quot;Open&quot;), 

1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Switch Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Post Completion</label>
    <nameField>
        <label>Post Completion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Post Completions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>